fix/dialog: keyboard covering input on ios (#39)

--- a/src/components/ui/dialog/Dialog.module.scss
+++ b/src/components/ui/dialog/Dialog.module.scss
@@ -4,7 +4,7 @@
   position: fixed;
   inset: 0;
   width: 100vw;
-  min-height: 100%;
+  height: var(--visual-viewport-height);
   display: grid;
   grid-template-rows: 1fr auto;
   overflow-y: auto;
